# CSPrediction

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: celery_app.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  deposit.py  login.py  logout.py  menu.py  popup.py  predict.py  price_model.py  register.py  secret.py
app/core/: config.py
app/cruds/: deposit.py  model.py  multiple.py  prediction.py  spend.py  user.py
app/data/: headers.json  mean_player.csv
app/models/: __init__.py  base.py  conversion.py  model.py  prediction.py  spend.py  user.py
app/models/mixins/: int_id_pk.py
app/schemas/: __init__.py  balance.py  email.py  model.py  user.py
app/servises/: user.py
app/sql_models/: __init__.py  db_helper.py  deposit.py  prediction.py  user.py
app/sql_models/mixins/: __init__.py
app/static/css/: styles.css
app/tasks/: __init__.py  predict.py
app/templates/: base.html  dashboard.html  header.html  popup.html
app/utils/: __init__.py  configure_logging.py  create_access_token.py  hash_string.py  predicator.py  preprocess_scrapped_data.py  preprocessed_data.py
app/views/: __init__.py  favicon.py  index.py
docs/: sequence.plantuml
web/: no_auth__login.html  no_auth__register.html  styles.css  web__balance__deposit.html  web__history_balance__empty.html  web__history_balance__fill.html  web__history_predict__empty.html  web__history_predict__fill.html  web__loading.html  web__popup.html  web__predict__empty.html  web__predict__final.html  web__predict__process.html  web__predict__search_match.html
(+32 files in other folders)
